chart toggle implementation

--- a/css/layout.css
+++ b/css/layout.css
@@ -6,7 +6,9 @@
 [k-show] {
   display: none;
 }
-
+[k-show][i] {
+  display: none !important;
+}
 /* Grid Layout */
 .grid-container {
   display: grid;
