--- a/css/report-table.css
+++ b/css/report-table.css
@@ -57,7 +57,10 @@
 }
 .searchname .find-btn {
   height: 100%;
+  font-size: 16px;
   padding: 0px 50px;
+  font-weight: 700;
+  font-family: Circular Std;
   background-color: #002855;
   color: #fff;
   outline: none;
@@ -141,10 +144,9 @@
   line-height: 15.18px;
   text-align: center;
   /* padding: 10px; */
-  border: 1px solid rgba(63, 61, 61, 0.436);
+  border-top: 1px solid rgba(63, 61, 61, 0.436);
+  border-bottom: 1px solid rgba(63, 61, 61, 0.436);
   background-color: #fff;
-  border-left: none;
-  border-right: none;
 }
 .report-container-table td.dots {
   width: 6.73px;
@@ -174,7 +176,7 @@
 .reportpop-up {
   background-color: #fff;
   width: 450px;
-  height: 550px;
+  height: fit-content;
   padding: 15px;
   border-radius: 5px;
 }
@@ -202,11 +204,12 @@
   padding-left: 10px;
 }
 .reportsales-overview p {
-  font-family: Poppins;
+  font-family: Mulish;
   font-size: 8px;
   font-weight: 400;
   line-height: 12px;
   text-align: left;
+  cursor: pointer;
   color: #e30000;
   padding-left: 15px;
 }
@@ -275,6 +278,14 @@
   line-height: 13.91px;
   text-align: left;
   color: #002855;
+}
+
+td.first-td {
+  border-left: 1px solid rgba(63, 61, 61, 0.436);
+}
+
+td.dots {
+  border-right: 1px solid rgba(63, 61, 61, 0.436);
 }
 
 /* scrollable input checkboxes styling */
@@ -457,12 +468,20 @@
             width: 100%;
             height: 160.33px;
             padding-top: 0px;
+            padding: 10px;
            background-color: rgba(39,83,135,0.08);
             backdrop-filter: blur(10px);
             
         }
+        .searchbyname  {
+          width: 100%;
+          border-radius: 5px;
+        }
         .searchname .find-btn {
+            font-family: Circular Std;
             height: 100%;
+            font-size: 10px;
+            font-weight: 700;
             padding: 5px 30px;
             background-color: #002855;
             margin-top: 0px;
