--- a/css/report-table.css
+++ b/css/report-table.css
@@ -172,10 +172,11 @@
   align-items: center;
   z-index: 10;
   visibility: hidden;
+  padding:60px
 }
 .reportpop-up {
   background-color: #fff;
-  width: 450px;
+  width: 400px;
   height: fit-content;
   padding: 15px;
   border-radius: 5px;
@@ -435,72 +436,78 @@ td.dots {
   margin-bottom: 5px;
   border-radius: 5px;
 }
-
-@media  screen and (max-width:760px) {
-    .report-table-header .report-table-header-btn {
-        height: Hug (28px) px;
-        font-size: 10px;
-        font-weight: 700;
-        line-height: 10.24px;
-        padding: 10px;
-      } 
-      .report-table-header h1 {
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 20.36px;
-        margin-bottom: 0px;
-      }
-      @media  screen and (max-width:668px){
-        .searchname{
-            flex-direction: column;
-        }
-        .searchbyname p {
-            display:none;
-        }
-        .searchname{
-            align-items: flex-start;
-        }
-        .searchinput{
-            width:100%;
-            flex:1;
-        }
-        .searchsection-container {
-            width: 100%;
-            height: 160.33px;
-            padding-top: 0px;
-            padding: 10px;
-           background-color: rgba(39,83,135,0.08);
-            backdrop-filter: blur(10px);
-            
-        }
-        .searchbyname  {
-          width: 100%;
-          border-radius: 5px;
-        }
-        .searchname .find-btn {
-            font-family: Circular Std;
-            height: 100%;
-            font-size: 10px;
-            font-weight: 700;
-            padding: 5px 30px;
-            background-color: #002855;
-            margin-top: 0px;
-        }
-        .searchsectionmid-container{
-          border:none;
-          padding:15px;
-        }
-      }
-      @media  screen and (max-width:555px){
-        .tablewrapper{
-            display:none;
-        }
-        .block-table{
-            display:flex;
-            border-radius: 1px solid #ddd;
-        }
-.recent-result{
-    padding-left:20px
+.person-detail h6{
+  font-size: 8px;
 }
-      }
+p.value {
+  font-size: 12px;
+  
+}
+
+@media screen and (max-width: 760px) {
+  .report-table-header .report-table-header-btn {
+    height: Hug (28px) px;
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 10.24px;
+    padding: 10px;
+  }
+  .report-table-header h1 {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 20.36px;
+    margin-bottom: 0px;
+  }
+  @media screen and (max-width: 668px) {
+    .searchname {
+      flex-direction: column;
+    }
+    .searchbyname p {
+      display: none;
+    }
+    .searchname {
+      align-items: flex-start;
+    }
+    .searchinput {
+      width: 100%;
+      flex: 1;
+    }
+    .searchsection-container {
+      width: 100%;
+      height: 160.33px;
+      padding-top: 0px;
+      padding: 10px;
+      background-color: rgba(39, 83, 135, 0.08);
+      backdrop-filter: blur(10px);
+    }
+    .searchbyname {
+      width: 100%;
+      border-radius: 5px;
+    }
+    .searchname .find-btn {
+      font-family: Circular Std;
+      height: 100%;
+      font-size: 10px;
+      font-weight: 700;
+      padding: 5px 30px;
+      background-color: #002855;
+      margin-top: 0px;
+    }
+    .searchsectionmid-container {
+      border: none;
+      padding: 15px;
+    }
+  }
+  @media screen and (max-width: 585px) {
+    .tablewrapper {
+      display: none;
+    }
+    .block-table {
+      display: flex;
+      border-radius: 1px solid #ddd;
+    }
+    .recent-result {
+      padding-left: 20px;
+    }
+  }
 }
