--- a/css/report-data.css
+++ b/css/report-data.css
@@ -2,38 +2,82 @@
   display: flex;
   justify-content: space-between;
   padding: 20px;
-  margin-top: 50px;
+  background-color: white;
+  gap: 1rem;
+  min-height: 421px;
 }
 
 .chart-container {
-  flex: 1;
-  margin-right: 20px;
+  width: 55%;
+  border: 1px solid #eff1f1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 12px 10px 23px 10px;
+  overflow-x: scroll;
+}
+.chart-container #reportChart {
+  max-width: 100%;
 }
 
 .table-container {
+  width: 45%;
+  border: 1px solid #eff1f1;
+  padding: 12px 28px 23px 24px;
+  min-height: 421px;
+  overflow-x: scroll;
+}
+@media screen and (max-width: 1200px) {
+  .report-data-container2 {
+    flex-direction: column-reverse;
+    gap: 2rem;
+    padding: 5px;
+  }
+  .chart-container {
+    width: 100%;
+    height: 400px;
+  }
+  .table-container {
+    width: 100%;
+  }
+}
+.span {
+  display: flex;
   flex: 1;
+  align-items: center;
+  gap: 4px;
+  justify-content: flex-end;
+  margin-bottom: 20px;
 }
 
 /* Updated class name for the report table */
 .sales-report-table {
   width: 100%;
   border-collapse: collapse;
+  border: 1px solid #eff1f1;
+  text-align: center;
 }
 
 .sales-report-table thead th {
-  text-align: left;
-  padding: 8px;
-  background-color: #f0f0f0;
+  font-family: Circular Std;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17.71px;
+  color: #62686d;
+  border-bottom: 1px solid #dddfe0;
+  padding: 16px;
+  text-wrap: nowrap;
 }
 
 .sales-report-table tbody td {
-  text-align: center;
-  padding: 8px;
-  border: 1px solid #ddd;
+  font-size: 14px;
+  font-weight: 450;
+  line-height: 17.71px;
+  padding: 16px;
 }
 
-.sales-report-table tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
+.sales-report-table tbody tr:last-child {
+  background-color: #d9d9d9;
 }
 
 /* Other existing styles remain the same */
@@ -47,21 +91,37 @@
   justify-content: space-between;
   align-items: center;
 }
-
+.report-data-header h1 {
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 30.36px;
+  color: #585858;
+}
 .report-data-date-range {
   display: flex;
+  gap: 10px;
   align-items: center;
 }
 
 .report-data-date-range label {
-  margin-right: 10px;
   font-size: 14px;
+  font-weight: 500;
+  line-height: 17.71px;
+  color: #7f8b94;
 }
 
-.report-data-date-range input {
-  margin-right: 10px;
-  padding: 5px;
-  font-size: 14px;
+.report-data-date-range .date-flex {
+  padding: 11px 14px;
+  border: 1px solid #7f8b9480;
+  display: flex;
+  align-items: center;
+  gap: 21px;
+  color: #585858;
+  background-color: #fff;
+  border-radius: 3px 0px 0px 3px;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 12.65px;
 }
 
 .report-data-actions {
@@ -70,19 +130,26 @@
 }
 
 .report-data-actions button {
-  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  gap: 22px;
   padding: 10px 20px;
   font-size: 14px;
-  background-color: #1c64f2;
+  background-color: #002855;
   color: white;
   border: none;
   border-radius: 5px;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: -0.20000000298023224px;
   cursor: pointer;
 }
 
 .report-data-actions button.report-data-back {
   background-color: #f3f4f6;
-  color: #1c64f2;
+  gap: 12px;
+  color: #002855;
 }
 
 .report-data-sales {
@@ -93,9 +160,17 @@
   align-items: center;
   justify-content: space-between;
 }
+.report-data-sales .flex .sub-flex {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+}
+
 .report-data-sales h2 {
-  font-size: 18px;
-  margin-bottom: 10px;
+  color: #585858;
+  font-size: 16px;
+  font-weight: 900;
+  line-height: 20.24px;
 }
 .bottom-line {
   border: 0.5px solid #9f9f9f;
@@ -107,7 +182,7 @@
 }
 .bottom-line .bottom-inner {
   border: 2px solid #002855;
-  width: 20%;
+  width: 10%;
 }
 
 .report-data-cards {
@@ -115,11 +190,38 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
 }
+@media screen and (max-width: 1280px) {
+  .report-data-cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 600px) {
+  .report-data-cards {
+    grid-template-columns: 1fr;
+  }
+  .report-data-actions {
+    flex-direction: column;
+    align-self: flex-end;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .report-data-header {
+    flex-direction: column;
+  }
+  .report-data-header h1 {
+    align-self: flex-start;
+  }
+  .report-data-sales .flex {
+    flex-direction: column;
+  }
+  .report-data-sales .flex .sub-flex {
+    align-self: flex-start;
+  }
+}
 
 .report-data-card {
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -127,24 +229,29 @@
 .card-up {
   display: flex;
   align-items: start;
-  justify-content: space-between;
-  padding: 28px 22px;
+  gap: 21px;
+  padding: 28px 22px 12px 22px;
 }
-.details {
+.details,
+.details2 {
   display: flex;
   flex-direction: column;
-  text-wrap: wrap;
+  gap: 2px;
+}
+.details2 {
+  margin-left: auto;
 }
 .details h3 {
   font-size: 45px;
   font-weight: 900;
-  line-height: 56.92px;
+  /* line-height: 56.92px; */
   color: #585858;
 }
 .details p {
   font-size: 12px;
   font-weight: 700;
   line-height: 15.18px;
+  text-wrap: nowrap;
   color: #7f8b94;
 }
 .details span {
@@ -153,14 +260,6 @@
   font-size: 8px;
   font-weight: 600;
   line-height: 10.04px;
-}
-
-.report-data-card img {
-  margin-bottom: 10px;
-}
-
-.report-data-card-info {
-  margin-bottom: 10px;
 }
 
 .report-data-card-info h3 {
@@ -182,26 +281,33 @@
   background-color: #f9fafb;
   padding: 13px 24px;
   border-radius: 0px 0px 5px 5px;
-  margin-top: 10px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   width: 100%;
 }
 
 .bul1 {
   display: flex;
-  gap: 3px;
+  gap: 5px;
+  align-items: center;
 }
 
 .report-data-card-breakdown .bul1 p {
   font-family: Mulish;
   font-size: 10px;
   font-weight: 600;
+  margin-bottom: 4px;
   line-height: 12.55px;
-  text-align: left;
 }
 .breakdown-1 {
-  background-color: #0277e640; /* Example color for the first card */
+  font-family: Mulish;
+  font-size: 10px;
+  font-weight: 600;
+  line-height: 12.55px;
+  color: #585858;
+  background-color: #0277e640;
+  justify-content: flex-end;
 }
 
 .breakdown-2 {
@@ -226,7 +332,7 @@
 }
 
 .breakdown-1 p {
-  justify-self: end;
+  text-align: right;
 }
 .report-data-card-breakdown .bul1 p span {
   color: #585858;
@@ -283,6 +389,18 @@
   display: flex;
   gap: 10px;
 }
+.chart-flex .toggle-btn {
+  padding: 7px 13px 7px 18px;
+  font-size: 11px;
+  font-weight: 450;
+  line-height: 13.91px;
+  color: #f8f9f9;
+  background-color: #002855;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 #report-data canvas {
   margin: 0 auto;
 }
