--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,7 @@
           border-radius: 5px;
           background-color: #002855;
           color: #fff;
+          text-align: center;
           width: 100%;
           padding-block: 20px;
           border: 2px solid transparent;
