--- a/css/dashboard-page.css
+++ b/css/dashboard-page.css
@@ -145,8 +145,10 @@
   font-weight: 450;
   line-height: 13.91px;
   padding: 15px 0;
-  /* text-align: center; */
-  /* text-align: left; */
+  font-size: 11px;
+  font-weight: 450;
+  line-height: 13.91px;
+  color: #353535;
 }
 
 .status.pending {
@@ -190,10 +192,19 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+  color: #585858;
+  font-size: 10px;
+  font-weight: 700;
+  line-height: 12.65px;
+  text-align: left;
 }
 
 .activity span {
-  color: blue;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 12.65px;
+  text-align: left;
+  color: #002855;
 }
 
 /* Media Queries */
