--- a/css/dashboard-page.css
+++ b/css/dashboard-page.css
@@ -1,275 +1,3 @@
-/* 
-.dashboard {
-  padding: 20px;
-}
-
-.dashboard h1 {
-  margin-bottom: 20px;
-}
-
-.stats {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 35px;
-  margin-bottom: 20px;
-}
-
-.stat-item {
-  background-color: #fff;
-  padding: 25px;
-  border-radius: 8px;
-  text-align: start;
-}
-
-.stat-item h2 {
-  font-size: 18px;
-  margin-bottom: 10px;
-  color: #fff;
-}
-
-.stat-item span {
-  font-size: 30px;
-  font-weight: bold;
-  margin-left: 45%;
-  color: #fff;
-}
-
-.blue {
-  background-color: #002855;
-}
-
-.yellow {
-  background-color: #E6B014;
-}
-
-.brown {
-  background-color: #353535;
-}
-
-.green {
-  background-color: #00B388;
-}
-
-.actions {
-  display: flex;
-  gap: 20px;
-  margin-bottom: 20px;
-}
-
-.actions button {
-  padding: 10px 33px;
-  border: none;
-  border-radius: 4px;
-  background-color: #002d72;
-  color: #fff;
-  cursor: pointer;
-}
-
-.content {
-  display: grid;
-  grid-template-columns: 2fr 2fr;
-  gap: 20px;
-}
-
-.prospects {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 8px;
-}
-.text {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #aaa;
-}
-.text button {
-  padding: 5px 10px;
-  background-color: #002d72;
-  color: #fff;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  border: none;
-}
-
-.prospects h3 {
-  margin-bottom: 20px;
-}
-
-.prospects table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.prospects table th,
-.prospects table td {
-  padding: 10px;
-  text-align: left;
-}
-
-.status.pending {
-  color: #ffc107;
-}
-
-.status.completed {
-  color: #28a745;
-}
-
-.stats-details {
-  display: grid;
-  gap: 20px;
-}
-
-.chart,
-.activity {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 8px;
-}
-
-.chart .dashchart {
-  max-width: 100%;
-}
-
-
-.chart h3,
-.activity h3 {
-  margin-bottom: 20px;
-}
-
-.activity ul {
-  list-style: none;
-}
-
-.activity li {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 25px;
-}
-
-.activity span {
-  color: blue;
-}
-
-
-@media (max-width: 1200px) {
-  .stats {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 992px) {
-  .stats {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .content {
-    grid-template-columns: 1fr;
-  }
-}
-
-@media (max-width: 576px) {
-  .stats {
-    grid-template-columns: 1fr;
-  }
-
-  .content {
-    grid-template-columns: 1fr;
-  }
-
-  .actions {
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .actions button {
-    width: 100%;
-  }
-}
-
-@media (max-width: 425px) {
-  .dashboard h1 {
-    font-size: 18px;
-  }
-
-  .stats {
-    grid-template-columns: 1fr;
-    gap: 15px;
-  }
-
-  .stat-item {
-    padding: 15px;
-    overflow: hidden;
-  }
-
-  .stat-item h2 {
-    font-size: 16px;
-  }
-
-  .stat-item span {
-    font-size: 24px;
-    margin-left: 0;
-  }
-
-  .actions {
-    flex-direction: column;
-    gap: 5px;
-  }
-
-  .actions button {
-    width: 100%;
-    padding: 8px;
-  }
-
-  .content {
-    grid-template-columns: 1fr;
-    overflow-x: auto;
-    overflow-y: hidden;
-  }
-
-  .prospects {
-    background-color: #fff;
-    padding: 10px;
-    border-radius: 8px;
-    overflow-y: scroll;
-    margin-bottom: 10px;
-  }
-
-  .prospects h3 {
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-
-  .prospects table {
-    font-size: 12px;
-    width: 100%;
-    border-collapse: collapse;
-  }
-
-  .prospects table th,
-  .prospects table td {
-    padding: 8px;
-    text-align: left;
-  }
-
-  .stats-details {
-    display: grid;
-    gap: 10px;
-  }
-
-  .chart h3,
-  .activity h3 {
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-
-  .activity ul {
-    font-size: 12px;
-  }
-
-  .activity li {
-    margin-bottom: 15px;
-  }
-} */
-
 /* this the part of the dashboard (main section) */
 .dashboard {
   padding: 20px;
@@ -308,7 +36,7 @@
 }
 
 .stat-item span {
-  font-size: 60px;
+  font-size: 3.8rem;
   font-weight: 700;
   line-height: 75.9px;
   color: #f3f5f6;
@@ -506,7 +234,7 @@
   }
 
   .actions {
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 10px;
   }
 
@@ -540,13 +268,14 @@
   }
 
   .actions {
-    flex-direction: column;
+    /* flex-direction: column; */
+    width: 280px;
     gap: 5px;
   }
 
-  .actions button {
-    width: 100%;
-    padding: 8px;
+  .actions .action-btn {
+    font-size: 10px;
+    /* padding: 0 10px; */
   }
 
   .content {
@@ -592,10 +321,12 @@
   }
 
   .activity ul {
+    padding: 10px;
     font-size: 12px;
-  }
+}
 
   .activity li {
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
+    padding: 5px 10px;
   }
 }
