--- a/css/report-data.css
+++ b/css/report-data.css
@@ -4,7 +4,7 @@
   padding: 20px;
   background-color: white;
   gap: 1rem;
-  min-height: 421px;
+  /* min-height: 421px; */
 }
 
 .chart-container {
@@ -16,15 +16,12 @@
   padding: 12px 10px 23px 10px;
   overflow-x: scroll;
 }
-.chart-container #reportChart {
-  max-width: 100%;
-}
 
 .table-container {
   width: 45%;
   border: 1px solid #eff1f1;
   padding: 12px 28px 23px 24px;
-  min-height: 421px;
+  /* min-height: 421px; */
   overflow-x: scroll;
 }
 @media screen and (max-width: 1200px) {
@@ -35,7 +32,6 @@
   }
   .chart-container {
     width: 100%;
-    height: 400px;
   }
   .table-container {
     width: 100%;
@@ -48,6 +44,22 @@
   gap: 4px;
   justify-content: flex-end;
   margin-bottom: 20px;
+}
+.span span:first-child {
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 12.65px;
+  border-bottom: 1px solid #002855;
+  color: #002855;
+}
+
+/* Style for the second and third <span> */
+.span span:nth-child(2),
+.span span:nth-child(3) {
+  font-size: 10px;
+  font-weight: 450;
+  line-height: 12.65px;
+  color: #959798;
 }
 
 /* Updated class name for the report table */
@@ -129,7 +141,8 @@
   align-items: center;
 }
 
-.report-data-actions button {
+.report-data-actions button,
+.report-data-actions a {
   display: flex;
   align-items: center;
   gap: 22px;
@@ -146,7 +159,7 @@
   cursor: pointer;
 }
 
-.report-data-actions button.report-data-back {
+.report-data-actions a.report-data-back {
   background-color: #f3f4f6;
   gap: 12px;
   color: #002855;
@@ -367,20 +380,22 @@
   margin-top: 40px;
   width: 100%;
   padding: 1rem;
-  overflow-x: scroll;
   border-radius: 5px;
   background-color: white;
-  overflow-x: hidden;
 }
-#report-data .chartBox {
-  width: 100%;
-  min-height: 300px;
+#report-data .chartBox,
+.report-data-container2 .chartBox {
+  overflow-x: scroll;
   margin: 0 auto;
+  width: 100% !important;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+
+  ::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
+  }
 }
-#report-data .chartBox > #myChart {
-  width: 100%;
-  height: 300px;
-}
+
 .chart-flex {
   display: flex;
   justify-content: space-between;
@@ -403,4 +418,341 @@
 
 #report-data canvas {
   margin: 0 auto;
+}
+
+/* Modal Wrapper */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+.modal.active-modal {
+  display: flex;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: white;
+  margin: 0 auto;
+  border-radius: 8px;
+  width: 500px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+} /* Modal Header */
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; /* padding-bottom: 10px; */
+}
+.modal-header-closeBtn h2 {
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 30.12px;
+  text-align: left;
+  color: #34475e;
+}
+.modal-header-closeBtn {
+  font-size: 14px;
+  font-weight: 450;
+  line-height: 17.71px;
+  text-align: left;
+  columns: #000;
+}
+.close-button {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+} /* Sales Overview Section */
+.sales-overview {
+  max-width: 100%;
+  width: 90%;
+  height: 20px;
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  background: #ffb94640;
+  padding: 10px;
+  margin-top: 15px; /* margin: 0 auto; */
+}
+.sales-overview h3 {
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 17.57px;
+  text-align: left;
+  color: #34475e;
+}
+.sales-overview .change-button {
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 12px;
+  text-align: left;
+  color: #e30000;
+  background: none;
+  border: none;
+  cursor: pointer;
+} /* Date Range Section */
+.date-range {
+  margin-top: 15px;
+}
+.date-range .start-date {
+  font-size: 14px;
+  color: #555;
+  margin-right: 10px;
+}
+.date-range .select {
+  width: 173px;
+  margin-right: -6px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+} /* Recurrent Reporting */
+.recurrent-reporting {
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+  max-width: 100%;
+  width: 92%;
+  background: #f5f8fa;
+  padding: 5px;
+  margin-top: 15px;
+}
+.recurrent-reporting .recurrent-label {
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 15.18px;
+  text-align: left;
+  color: #7f8b94;
+} /* Select Options */
+.select-options {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-top: 20px;
+  font-size: 14px;
+  cursor: pointer;
+}
+.select-head {
+  font-size: 11px;
+  font-weight: 700;
+  line-height: 13.91px;
+  text-decoration: underline;
+  text-align: left;
+  color: #002855;
+} /* Parameters List */
+.parameters-list {
+  max-width: 100%;
+  width: 93%;
+  border-radius: 3px;
+  list-style: none;
+  padding: 0;
+  margin-top: 15px;
+  border: 1px solid #7f8b9480;
+  padding-bottom: 7%;
+}
+.parameters-list .parameters {
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 15.18px;
+  text-align: left;
+} /* Recurrent Options */
+.recurrent-options {
+  margin-top: 15px;
+  padding: 10px;
+}
+.form-group {
+  margin-bottom: 15px;
+}
+.when-select,
+.to-input {
+  width: 82%;
+  height: 35px;
+  margin-left: 5%;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #947f8880;
+  border-radius: 4px;
+}
+.when-label,
+.format p {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17.71px;
+  text-align: left;
+  color: #7f8b94;
+}
+.to-input {
+  margin-left: 9%;
+}
+.toggle-option {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 23px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 1px;
+  border: 1px solid #00b388;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+.input:checked + .slider {
+  background-color: #00b388;
+}
+.input:checked + .slider:before {
+  transform: translateX(14px);
+} /* Modal Footer */
+.modal-footer {
+  width: 93%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+.format span {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17.71px;
+  text-align: left;
+  color: #34475e;
+}
+.cancel-button,
+.export-button {
+  width: 171px;
+  height: 48px;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 22.77px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #002855;
+}
+.cancel-button {
+  background-color: #d4d4d4;
+}
+
+.success-modal-container {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(1px);
+  z-index: 3330;
+}
+
+.report-success-modal {
+  height: 400px;
+  width: 100%;
+  max-width: 500px;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 100px;
+}
+
+.report-success-modal h1 {
+  text-align: center;
+  font-family: Circular Std;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 40.48px;
+  margin-top: 50px;
+}
+
+.report-success-modal .success-image {
+  width: 25%;
+  height: 25%;
+  margin: auto;
+}
+
+.back-button {
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  background-color: #002855;
+  border: none;
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 767px) {
+  .modal-content {
+    width: 80%;
+    padding: 15px;
+  }
+  .modal-header-closeBtn h2 {
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .sales-overview h3,
+  .sales-overview .change-button {
+    font-size: 12px;
+  }
+  .date-range {
+    flex-direction: column;
+    font-size: 12px;
+  }
+  .date-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 5px;
+    gap: 5px;
+  }
+  .when-select,
+  .to-input {
+    width: 100%;
+    margin-left: 2%;
+  }
 }
