--- a/css/report-table.css
+++ b/css/report-table.css
@@ -18,6 +18,7 @@
   line-height: 30.36px;
   margin-bottom: 40px;
   padding-left: 10px;
+  color:#585858
 }
 .report-table-header .report-table-header-btn {
   height: Hug (48px) px;
@@ -40,11 +41,11 @@
   border-radius: 10px;
   margin-top: 10px;
   padding-left: 10px;
-  padding-right: 40px;
+  /* padding-right: 40px; */
 }
 .searchsectionmid-container {
   width: 100%;
-  border: 1px solid rgba(63, 61, 61, 0.436);
+  border: 1px solid #58585833;
   height: 83.34px;
   border-radius: 5px;
   padding: 20px;
@@ -79,12 +80,14 @@
   font-family: Circular Std;
   font-size: 15.15px;
   font-weight: 500;
+  color:#34475E;
+  background-color: #F3F5F6;
   line-height: 19.17px;
-  border: 1px solid rgba(63, 61, 61, 0.436);
+  border: 0.95px solid #7F8B9480;
 }
 .reportsearchinput {
   height: 100%;
-  border: 1px solid rgba(63, 61, 61, 0.436);
+  border: 1px solid #58585833;
   outline: none;
   background: url(../assets/search\ icon.svg) no-repeat;
   display: flex;
@@ -134,6 +137,7 @@
 .report-container-table tbody tr td {
   height: 49px;
   margin-bottom: 10px;
+  color:#353535
 }
 
 .report-container-table tbody td {
@@ -144,8 +148,9 @@
   line-height: 15.18px;
   text-align: center;
   /* padding: 10px; */
-  border-top: 1px solid rgba(63, 61, 61, 0.436);
-  border-bottom: 1px solid rgba(63, 61, 61, 0.436);
+  border-top: 1px solid #58585833;
+  border-bottom: 1px solid #58585833;
+  
   background-color: #fff;
 }
 .report-container-table td.dots {
@@ -282,11 +287,11 @@
 }
 
 td.first-td {
-  border-left: 1px solid rgba(63, 61, 61, 0.436);
+  border-left: 1px solid #58585833;
 }
 
 td.dots {
-  border-right: 1px solid rgba(63, 61, 61, 0.436);
+  border-right: 1px solid #58585833;
 }
 
 /* scrollable input checkboxes styling */
@@ -433,7 +438,7 @@ td.dots {
 }
 .block-table {
   display: none;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   border-radius: 5px;
 }
 .person-detail h6{
@@ -442,6 +447,11 @@ td.dots {
 p.value {
   font-size: 12px;
   
+}
+@media screen and (max-width:1023px) {
+  .report-table-container{
+   padding-right: 50px;
+  }
 }
 
 @media screen and (max-width: 760px) {
@@ -509,5 +519,12 @@ p.value {
     .recent-result {
       padding-left: 20px;
     }
+  }
+  
+}
+@media screen and (max-width: 400px){
+  .reportsearchinput {
+    width:150px;
+    border-radius:10px;
   }
 }
