--- a/css/dashboard-page.css
+++ b/css/dashboard-page.css
@@ -1,6 +1,6 @@
 /* this the part of the dashboard (main section) */
 .dashboard {
-  padding: 20px;
+  padding: 24px 61px 44px 26px;
 }
 
 .dashboard .dashboard-heading {
@@ -60,12 +60,12 @@
 
 .actions {
   display: flex;
-  gap: 20px;
-  margin-bottom: 20px;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .actions .action-btn {
-  padding: 10px;
+  padding: 13px 24px;
   border-radius: 5px;
   background-color: #002855;
   color: #fff;
@@ -74,19 +74,36 @@
   font-weight: 700;
   line-height: 18.97px;
   letter-spacing: 0.01em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: fit-content;
   text-align: center;
 }
 
 .content {
   display: grid;
-  grid-template-columns: 2fr 2fr;
+  grid-template-columns: 1fr 1fr;
+  gap: 51px;
+}
+
+.prospect-actions {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: fit-content auto;
+  gap: 20px;
+}
+
+.content .sec-cont {
+  display: grid;
+  grid-template-columns: 1fr;
   gap: 20px;
 }
 
 .prospects {
-  background-color: #fff;
   padding: 20px;
   border-radius: 8px;
+  background-color: white;
 }
 .prospects-border-bottom {
   border-bottom: 1px solid #f0f0f0;
@@ -133,13 +150,14 @@
   font-size: 12px;
   font-weight: 500;
   line-height: 15.18px;
-  text-align: left;
+  text-align: center;
   padding-bottom: 20px;
   color: #1f4173;
 }
 
 .prospects table td {
   font-size: 11px;
+  text-align: center;
   font-weight: 450;
   line-height: 13.91px;
   padding: 15px 0;
@@ -206,7 +224,21 @@
 }
 
 /* Media Queries */
+
+@media screen and (max-width: 1370px) {
+  .actions .action-btn {
+    font-size: 12px;
+    padding: 10px;
+  }
+  .dashboard {
+    padding: 24px 26px;
+  }
+}
 @media (max-width: 1200px) {
+  .dashboard {
+    padding: 20px;
+  }
+
   .stats {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -220,6 +252,9 @@
   .content {
     grid-template-columns: 1fr;
   }
+  .dashboard {
+    padding: 1rem;
+  }
 }
 
 @media (max-width: 576px) {
@@ -229,15 +264,6 @@
 
   .content {
     grid-template-columns: 1fr;
-  }
-
-  .actions {
-    /* flex-direction: column; */
-    gap: 10px;
-  }
-
-  .actions button {
-    width: 100%;
   }
 }
 
@@ -271,22 +297,15 @@
     gap: 5px;
   }
 
-  .actions .action-btn {
-    font-size: 10px;
-    /* padding: 0 10px; */
-  }
-
   .content {
     grid-template-columns: 1fr;
-    overflow-x: auto;
-    overflow-y: hidden;
+    gap: 1rem;
   }
 
   .prospects {
     background-color: #fff;
     padding: 10px;
     border-radius: 8px;
-    overflow-y: scroll;
     margin-bottom: 10px;
   }
 
@@ -321,7 +340,7 @@
   .activity ul {
     padding: 10px;
     font-size: 12px;
-}
+  }
 
   .activity li {
     /* margin-bottom: 15px; */
