Added extra functionality to three pages.

--- a/css/report-table.css
+++ b/css/report-table.css
@@ -227,9 +227,9 @@
 }
 .datadate-text {
   font-family: Mulish;
-  font-size: 14px;
+  font-size: 10px;
   font-weight: 600;
-  line-height: 17.57px;
+  line-height: 14.57px;
   text-align: left;
   color: #7f8b94;
   padding-top: 8px;
@@ -507,7 +507,7 @@ p.value {
       height: 100%;
       font-size: 10px;
       font-weight: 700;
-      padding: 5px 30px;
+      padding: 10px 30px;
       background-color: #002855;
       margin-top: 0px;
     }
@@ -527,6 +527,14 @@ p.value {
     .recent-result {
       padding-left: 20px;
     }
+    .data-date{
+      display:block;
+    }
+    .datadate-text {
+      padding-bottom: 5px;
+    }
+    .cancel-create-button > button {
+      padding: 10px ;
   }
   
 }
@@ -543,15 +551,11 @@ p.value {
     line-height: 1.5;
     margin-top: 3px;
   }
-  .data-date{
-    display:block;
-  }
+  
   .data-date-box p{
     font-size: 10px;
   }
-  .datadate-text {
-    padding-bottom: 5px;
-  }
+  
   .scrollable-container label {
     font-size: 10px;
     font-weight: 500;
@@ -570,5 +574,6 @@ p.value {
 }
 .reportsuccess-popup{
   width:310px;
+}
 }
 }
