added dropdown icon in prospect input

--- a/css/create-prospect.css
+++ b/css/create-prospect.css
@@ -107,6 +107,16 @@
   background-color: #34475e;
   border-radius: 50%;
 }
+
+.inpDropdown{
+  position: relative;
+}
+.inpDropdownIcon{
+  position: absolute;
+  right: 6%;
+  top: 50%;
+  transform: translateY(-50%);
+}
 /* ------------------------------- */
 .createPrspctBtn {
   padding: 18px 30px;
