--- a/css/layout.css
+++ b/css/layout.css
@@ -134,9 +134,11 @@
   width: 100%;
   height: 100%;
   border: none;
-  font-size: 16px;
   background-color: transparent;
   outline: none;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20.24px;
 }
 
 .search-icon {
