--- a/css/report-data.css
+++ b/css/report-data.css
@@ -216,17 +216,16 @@
     flex-direction: column;
     align-self: flex-end;
   }
-}
-@media screen and (max-width: 1200px) {
   .report-data-header {
+    flex-direction: column;
+  }
+  .report-data-sales .flex {
     flex-direction: column;
   }
   .report-data-header h1 {
     align-self: flex-start;
   }
-  .report-data-sales .flex {
-    flex-direction: column;
-  }
+
   .report-data-sales .flex .sub-flex {
     align-self: flex-start;
   }
@@ -421,7 +420,8 @@
 }
 
 /* Modal Wrapper */
-.modal {
+.modal,
+.report-modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -434,7 +434,8 @@
   justify-content: center;
   z-index: 1000;
 }
-.modal.active-modal {
+.modal.active-modal,
+.report-modal.active-modal {
   display: flex;
 }
 
@@ -502,6 +503,7 @@
   cursor: pointer;
 } /* Date Range Section */
 .date-range {
+  display: flex;
   margin-top: 15px;
 }
 .date-range .start-date {
@@ -659,6 +661,8 @@
   color: #34475e;
 }
 .cancel-button,
+.cancel-button2,
+.export-button2,
 .export-button {
   width: 171px;
   height: 48px;
@@ -671,11 +675,13 @@
   color: #ffffff;
   background-color: #002855;
 }
-.cancel-button {
+.cancel-button,
+.cancel-button2 {
   background-color: #d4d4d4;
 }
 
-.success-modal-container {
+.success-modal-container,
+.success-modal-container2 {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -715,7 +721,8 @@
   margin: auto;
 }
 
-.back-button {
+.back-button,
+.back-button2 {
   padding: 10px 20px;
   border-radius: 10px;
   color: #fff;
@@ -740,7 +747,6 @@
     font-size: 12px;
   }
   .date-range {
-    flex-direction: column;
     font-size: 12px;
   }
   .date-wrapper {
@@ -755,4 +761,21 @@
     width: 100%;
     margin-left: 2%;
   }
+}
+.chart-toggle input[type="checkbox"] {
+  appearance: none;
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  background-color: #ddd; /* Default background color */
+  border-radius: 4px;
+  position: relative;
+  cursor: pointer;
+}
+
+/* Checked state */
+.chart-toggle input[type="checkbox"]:checked {
+  background-size: contain;
+  padding: 2px;
+  background-image: url("../assets/check2.svg");
 }
